Fixing navbar z-index issue on activities page

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -30,7 +30,9 @@ img.logo {
   margin-bottom: 0;
   box-shadow: none;
   border: none;
+  z-index: 1;
 }
+
 .navbar-default {
   border-radius: 0;
 }
